--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.38.4",
     "buffer": "^6.0.3",
+    "dotenv": "^17.2.0",
     "expo": "~53.0.0",
     "expo-application": "~6.1.5",
     "expo-constants": "~17.1.7",
     "expo-device": "~7.1.4",
     "expo-document-picker": "^13.1.6",
-    "expo-image-picker": "~16.1.0",
+    "expo-image-picker": "^16.1.4",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
@@ -39,7 +40,8 @@
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "private": true
 }
