--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "^13.15.0"
+    "react-native-webview": "^13.15.0",
+    "expo-file-system": "~18.1.11",
+    "expo-sharing": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
