--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "expo-constants": "~17.1.7",
     "expo-device": "~7.1.4",
     "expo-document-picker": "^13.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-location": "~18.1.6",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.6",
     "react": "19.0.0",
@@ -38,11 +40,10 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "^13.15.0",
-    "expo-file-system": "~18.1.11",
-    "expo-sharing": "~13.1.5"
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
