--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.15.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-notifications": "~0.31.4",
+    "expo-local-authentication": "~16.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-plugin-module-resolver": "^5.0.2"
+    "babel-plugin-module-resolver": "^5.0.2",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
